Fix collapsable

--- a/js/src/styles/sidebar.scss
+++ b/js/src/styles/sidebar.scss
@@ -6,6 +6,7 @@
     padding: 1rem;
 
     @media (min-width: 768px) {
+        display: block;
         position: fixed;
         top: 0;
         bottom: 0;
